translation-tool/inputs/source_meta/objects/OfferLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Upfront_Fee_Payment_Method__c</fullName>
        <label>Add On Upfront Fee Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boleto</fullName>
                </value>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee__c</fullName>
        <label>Add On Upfront Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Charge__c</fullName>
        <label>Additional Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_Fee__c</fullName>
        <label>Commitment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Amount_Duration_in_Months__c</fullName>
        <label>Credit Amount Duration (in Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALUE</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Billing_Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Billing Spec</label>
        <referenceTo>Customer_Billing_Spec_Template__c</referenceTo>
        <relationshipLabel>Offer LineItems</relationshipLabel>
        <relationshipName>Offer_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ETF__c</fullName>
        <label>ETF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Offer LineItem Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>Offer LineItems</relationshipLabel>
        <relationshipName>OfferLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Billing_Deal_Name__c</fullName>
        <label>Override Billing Deal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <label>Override Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotional_Discount__c</fullName>
        <label>Promotional Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Offer LineItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Offer_Name__c</columns>
        <columns>ETF__c</columns>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Offer LineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>override_price_or_billing_date_populate</fullName>
        <active>false</active>
        <description>override price or billing date populate as mandatory</description>
        <errorConditionFormula>AND(ISBLANK(Override_Price__c),ISBLANK(Override_Billing_Deal_Name__c))</errorConditionFormula>
        <errorMessage>please enter either override price or override billing deal name.</errorMessage>
    </validationRules>
</CustomObject>